# kichou-daiko

./: .env.example  .gitignore  ADMIN_MANUAL.md  CLAUDE.md  PWA_HANDOFF.md  accounting_platform_final_v3.md  note_article_1.md  pyproject.toml  電帳法対応メモ.md
api/: Dockerfile  csv_export.py  drive_upload.py  journaling.py  main.py  models.py  requirements.txt
chrome-extension/: content.js  manifest.json  popup.html  popup.js
scraper-api/: .dockerignore  Dockerfile  browser_session.py  dedup.py  deploy.sh  drive_helper.py  main.py  namer.py  requirements.txt  rules.py
scraper-api/scrapers/: amazon_receipt.py  amazon_scraper.py  rakuten_receipt.py  rakuten_scraper.py  yahoo_scraper.py
src/acc_tool/: __init__.py  cli.py  models.py
src/acc_tool/compliance/: regulation.py
src/acc_tool/config/: settings.py
src/acc_tool/csv_gen/: journal.py
src/acc_tool/drive/: dedup.py  namer.py  uploader.py
src/acc_tool/parsers/: amazon.py  rakuten.py
src/acc_tool/scrapers/: amazon_receipt.py  amazon_scraper.py  rakuten_receipt.py  rakuten_scraper.py  yahoo_receipt.py  yahoo_scraper.py
tests/: test_compliance.py  test_csv_gen.py  test_dedup.py  test_namer.py  test_parsers.py
web/: .env.local.example  next.config.ts  package-lock.json  package.json
web/public/: manifest.json
web/src/: middleware.ts
web/src/app/: layout.tsx
web/src/components/: client-selector.tsx  csv-export-form.tsx  header.tsx  journal-rules.tsx  providers.tsx  receipt-list.tsx  receipt-upload-form.tsx  remote-browser.tsx  setup-wizard.tsx  trial-banner.tsx
web/src/hooks/: use-drive.ts  (+2 more)
(+31 files in other folders)
